<resources>
    <!-- Global -->
    <string name="app_name">Go4Lunch</string>
    <string name="app_logo_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="placeholder_distance">%dm</string>
    <string name="placeholder_amount">(%d)</string>
    <string name="placeholder_integer">%d</string>

    <!-- Login Activity authentication-->
    <string name="facebook_application_id">3092308644376950</string>
    <string name="fb_login_protocol_scheme">fb3092308644376950</string>
    <string name="error_authentication_canceled">Authentication canceled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred&#8230;</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_mail">Sign in with your Mail</string>

    <!-- Toolbar -->
    <string name="toolbar_default">I\'m hungry</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_workmates">Available workmates</string>
    <string name="toolbar_search_restaurants">Search restaurants</string>
    <string name="toolbar_search_workmates">Search workmates</string>

    <!-- Navigation Drawer-->
    <string name="noEmail">Email : _</string>
    <string name="noName">Name : _</string>
    <string name="navigation_drawer_your_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_settings">SETTINGS</string>
    <string name="navigation_drawer_logout">LOGOUT</string>
    <string name="navigation_drawer_no_booking_yet">You haven\'t chosen a restaurant yet!</string>

    <!-- Bottom navigation view -->
    <string name="bottom_navigation_mapview">Map View</string>
    <string name="bottom_navigation_listview">List View</string>
    <string name="bottom_navigation_workmates">Workmates</string>

    <!-- Restaurant -->
    <string name="restaurant_name">Restaurant</string>
    <string name="restaurant_address">Address</string>
    <string name="restaurant_hours">Hours</string>
    <string name="restaurant_distance">Distance</string>
    <string name="restaurant_workmates_number">(0)</string>
    <string name="restaurant_open">Open</string>
    <string name="restaurant_closed">Closed</string>
    <string name="restaurant_closing_soon">Closing soon (%s)</string>
    <string name="restaurant_open_until">Open until %s</string>
    <string name="restaurant_opens_at">Opens at %s</string>
    <string name="restaurant_no_schedule">Schedule not available</string>
    <string name="restaurant_no_phone">This restaurant has no phone number</string>
    <string name="restaurant_no_website">This restaurant has no website</string>
    <string name="restaurant_call">CALL</string>
    <string name="restaurant_like">LIKE</string>
    <string name="restaurant_website">WEBSITE</string>

    <!-- Workmates -->
    <string name="workmate_joining">is joining!</string>
    <string name="workmate_eating">is eating at:</string>
    <string name="workmate_not_yet">hasn\'t decided yet</string>

    <!-- Settings -->
    <string name="settings_map_zoom">Google map zoom</string>
    <string name="settings_search_radius">Search radius</string>
    <string name="settings_lunch_notification">Notify at lunch time</string>
    <string name="settings_notification_time">Notification time</string>
    <string name="settings_save">Save</string>

    <!-- Notifications -->
    <string name="notification_lunch">Your lunch:</string>
    <string name="notification_with">with:</string>

</resources>