<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_map_view_fragment">

    <fragment
        android:id="@+id/nav_restaurant_details_fragment"
        android:name="com.alexdb.go4lunch.ui.fragment.RestaurantDetailsFragment"
        android:label="@string/navigation_drawer_your_lunch"
        tools:layout="@layout/fragment_restaurant_details" >
        <argument
            android:name="placeId"
            app:argType="string"
            android:defaultValue="noPlaceId" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings_fragment"
        android:name="com.alexdb.go4lunch.ui.fragment.SettingsFragment"
        android:label="@string/navigation_drawer_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_map_view_fragment"
        android:name="com.alexdb.go4lunch.ui.fragment.MapViewFragment"
        android:label="@string/toolbar_default"
        tools:layout="@layout/fragment_map_view" >
        <action
            android:id="@+id/navigateToDetails"
            app:destination="@id/nav_restaurant_details_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_list_view_fragment"
        android:name="com.alexdb.go4lunch.ui.fragment.ListViewFragment"
        android:label="@string/toolbar_default"
        tools:layout="@layout/fragment_list_view" >
        <action
            android:id="@+id/navigate_to_details"
            app:destination="@id/nav_restaurant_details_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_workmates_view_fragment"
        android:name="com.alexdb.go4lunch.ui.fragment.WorkmatesViewFragment"
        android:label="@string/toolbar_workmates"
        tools:layout="@layout/fragment_workmates_view" />

</navigation>