<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Default">

    <!-- Background-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <!-- Logo-->
    <ImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:background="@drawable/ic_go4lunch_logo"
        android:layout_marginBottom="-10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_title"
        android:id="@+id/main_logo"
        android:contentDescription="@string/app_name" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/logo_title_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/main_description"
        android:id="@+id/main_title"/>

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/app_logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/main_description"/>

    <!-- Logging buttons -->
    <Button
        android:id="@+id/btn_google_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:padding="@dimen/default_button_padding"
        android:backgroundTint="@color/white"
        android:textColor="@color/grey"
        tools:ignore="RtlHardcoded"
        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@id/btn_facebook_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginRight="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:padding="@dimen/default_button_padding"
        android:backgroundTint="@color/facebook"
        android:textColor="@color/white"
        tools:ignore="RtlHardcoded"
        android:drawableLeft="@drawable/fui_ic_facebook_white_22dp"
        android:text="@string/sign_in_with_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>