<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:src="@drawable/ic_baseline_person_add_alt_1_24"
        app:maxImageSize="32dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/orange_500"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/restaurant_name"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/restaurant_address"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_star_20"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/name" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mini_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_star_20"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toTopOf="@id/name" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mini_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_star_20"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toTopOf="@id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/call_button"
        android:layout_width="@dimen/button_medium_size"
        android:layout_height="@dimen/button_medium_size"
        android:layout_marginStart="@dimen/large_margin"
        android:contentDescription="@string/restaurant_call"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <ImageView
            android:layout_width="@dimen/button_icon_medium_size"
            android:layout_height="@dimen/button_icon_medium_size"
            android:background="@color/fui_transparent"
            android:layout_marginTop="@dimen/default_margin"
            android:contentDescription="@string/restaurant_call"
            android:src="@drawable/ic_baseline_phone_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_call"
            android:textColor="@color/orange_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/like_button"
        android:layout_width="@dimen/button_medium_size"
        android:layout_height="@dimen/button_medium_size"
        android:contentDescription="@string/restaurant_like"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/website_button"
        app:layout_constraintStart_toEndOf="@id/call_button"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <ImageView
            android:id="@+id/like_button_icon"
            android:layout_width="@dimen/button_icon_medium_size"
            android:layout_height="@dimen/button_icon_medium_size"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/restaurant_like"
            android:src="@drawable/ic_baseline_orange_star_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_like"
            android:textColor="@color/orange_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/website_button"
        android:layout_width="@dimen/button_medium_size"
        android:layout_height="@dimen/button_medium_size"
        android:layout_marginEnd="@dimen/large_margin"
        android:contentDescription="@string/restaurant_website"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <ImageView
            android:layout_width="@dimen/button_icon_medium_size"
            android:layout_height="@dimen/button_icon_medium_size"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/restaurant_website"
            android:src="@drawable/ic_round_public_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_website"
            android:textColor="@color/orange_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

</androidx.constraintlayout.widget.ConstraintLayout>